# FabGrub

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  cmake_tests.cmake  configuration.mk  main.cpp  packages.cmake
.github/workflows/: build.yml
cmd/: FabGrub.cpp
config/: debug.mk  release.mk
it/: CMakeLists.txt  CommonTest.cpp  StubTest.cpp
lib/: CMakeLists.txt
src/: App.h  CMakeLists.txt  Version.h  VersionRange.cpp  VersionRange.h
src/action/: Action.h  Executable.h  ProtectedFolder.h  ProtectedPath.h  Sequence.h  SequentialFilling.h
src/adapter/pubgrub/: Provider.h  Requirement.h  Version.h
src/cancellation/: Cancellation.h  CtrlCCancellation.h  NonCancellable.h
src/choice/: CachedChoice.h  Choice.h  SuitableChoice.h  SuitablePackageWithVersion.h
src/contract/semver/: Version.h  VersionRange.h
src/destination/: Destination.h  DestinationDirectory.h  LoggedDestination.h  MemDestination.h
src/file/: FakeFile.h  File.h  HttpFile.h  MemFile.h
src/file-repository/: FileCachedFileRepository.h  FileRepository.h  OverloadedFileRepository.h
src/http/: Http.h  HttpClient.cpp  HttpClient.h  LoggedHttp.h  MemCachedHttp.h
src/log/: FakeLog.h  FileLog.h  ForkedLog.h  Log.h  StreamLog.h  SynchronizedLog.h
src/package/: ChosenPackage.h  JsonPackages.h  MemPackage.h  MemPackages.h  Package.h  PackageFromModInfo.h  PackageWithVersion.h  Packages.h
src/profile/: JsonProfile.h  MemProfile.h  MemProfiles.h  Profile.h  Profiles.h
src/re146/: FileRepository.h  JsonPackage.h  JsonPackages.h  JsonReqirements.h  Repository.h
src/repository/: MemRepository.h  OverloadedRepository.h  Repository.h
src/repository/re146/: HttpFile.h  JsonPackage.h  JsonPackages.h  JsonReqirements.h  Repository.h
src/requirement/: FactorioReqirement.h  MemRequirement.h  MemRequirements.h  Requirement.h  Requirements.h
src/scalar/: JsonFromFile.h
src/semantic-type/: Max.h  Min.h  ScalarBase.h
src/semver/: CustomVersion.h  FactorioVersionOf.h  MajorOf.h  MaxVersionPart.h  MinVersionPart.h  MinorOf.h  MonotonousVersion.h  NextPatch.h  OptionalPatch.h  PatchOf.h  PrevPatch.h  Version.h  VersionFromParts.h  VersionOf.h  VersionOfString.h  VersionPart.h  VersionRange.cpp  VersionRange.h  VersionUnion.cpp  VersionUnion.h
src/solution/: FileCachedSolution.h  PubgrubSolution.h  Solution.h
src/storage/: AuthorityBasedStorage.cpp  AuthorityBasedStorage.h  FalseFile.h  File.h  LocalStorage.cpp  LocalStorage.h  PortalStorage.cpp  PortalStorage.h  ReadOnlyStorage.h  Storage.h  forward.h
src/utils/: Interface.h  List.h  MemList.h  defer.h  locale.h  parseInt.h  ptr.h  pure.h  range.h  stringify.h  urlEncoded.cpp  urlEncoded.h
test-utils/: CMakeLists.txt  doctest-nolint.h  random.cpp  random.h
tests/: AuthorityBasedStorageTests.cpp  CMakeLists.txt  VersionRangeTests.cpp  VersionTests.cpp  helloworld.cpp  utils.cpp  utils.h
tests/semver/: CustomVersionTest.cpp  MonotonousVersionTest.cpp  NextPatchTest.cpp  PrevPatchTest.cpp  VersionOfStringTest.cpp  VersionOfTest.cpp  VersionRangeTests.cpp  VersionTests.cpp  VersionUnionTests.cpp
tests/solution/: PubgrubSolutionTest.cpp
tests/storage/: AuthorityBasedStorageTest.cpp  AuthorityBasedStorageTests.cpp
